<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Top of Post Text /-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <!-- Profile layout /-->
                <LinearLayout
                    android:id="@+id/profileMainLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <!-- Profile Picture /-->
                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:padding="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imgProfilePic"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center" />

                            <TextView
                                android:id="@+id/txtProfilePic"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:textAllCaps="true"
                                android:textColor="@color/White"
                                android:textSize="20sp"
                                android:visibility="gone" />

                        </RelativeLayout>

                    </LinearLayout>

                    <!-- Profile Detail Name-CreateAt /-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center|left"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:text="'@'username"
                            android:textColor="@color/fab_color_pressed"
                            android:textSize="17sp" />


                    </LinearLayout>

                </LinearLayout>

                <!-- Like Icon /-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:gravity="right"
                    android:paddingRight="10dp">

                    <ImageView
                        android:id="@+id/imgFavorite"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="10dp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPoet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/txtBaslik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="15dp"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seeMore"
                    android:textColor="@color/Blue"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp">

                    <TextView
                        android:id="@+id/txtSair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/fab_color_pressed" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txtShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/imgShare"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/share" />

                    <ImageView
                        android:id="@+id/imgShare"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">


                    <TextView
                        android:id="@+id/txtRecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/imgRecord"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/txtRecord" />

                    <ImageView
                        android:id="@+id/imgRecord"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp" />

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
