<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_bg"
                        android:fitsSystemWindows="false"
                        android:scaleType="centerCrop"
                        app:layout_collapseMode="parallax" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient_bg" />

                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:actionBarSize"
                    android:elevation="7dp"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">


                    <com.uren.siirler.Utils.ClickableImage.ClickableImageView
                        android:id="@+id/imgBack"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:padding="13dp" />


                </android.support.v7.widget.Toolbar>


            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/GhostWhite"
                android:minHeight="600dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llPoem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/txtBaslik"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/fab_color_pressed"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/txtPoem"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="15dp"
                                android:textColor="@color/black"
                                android:textSize="15sp" />

                            <TextView
                                android:id="@+id/txtAllPoems"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:layout_marginTop="20dp"
                                android:text="@string/allPoems"
                                android:textColor="@color/Blue" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:gravity="center">

                                <com.uren.siirler.Utils.ClickableImage.ClickableImageView
                                    android:id="@+id/imgFavorite"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/rlShare"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginTop="20dp"
                                android:gravity="center">

                                <ImageView
                                    android:id="@+id/imgShare"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:src="@drawable/icon_share2" />

                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/rlRecord"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginTop="20dp"
                                android:gravity="center">

                                <ImageView
                                    android:id="@+id/imgRecord"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp" />

                            </RelativeLayout>


                        </LinearLayout>


                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="50dp"
                        android:background="@color/clearWhite"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtSuggestion"
                            style="@style/customTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:gravity="bottom"
                            android:text="@string/suggestions"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </android.support.design.widget.CoordinatorLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/ADMOB_BANNER_AD_UNIT_ID" />

    </RelativeLayout>


</LinearLayout>